BorrowLenses_PartialSandbox/Automatic Response Flow/objects/Answer__c.object
<CustomObject>
    <fields>
        <fullName>Choice10__c</fullName>
        <label>Choice 10</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Choice1__c</fullName>
        <label>Choice 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Choice2__c</fullName>
        <label>Choice 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Choices__c</fullName>
        <label>Choices</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Answers</relationshipLabel>
        <relationshipName>Answers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DisplayValue__c</fullName>
        <label>Display Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>FormField__c</fullName>
        <label>FormField</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GetFeedbackId__c</fullName>
        <externalId>true</externalId>
        <label>GetFeedbackId</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>GridItem__c</fullName>
        <label>GridItem</label>
        <length>155</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsDetractor__c</fullName>
        <formula>AND(NOT(ISBLANK(Number__c)), Number__c &lt;= 6)</formula>
        <label>IsDetractor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsPromoter__c</fullName>
        <formula>Number__c &gt;= 9</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IsPromoter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Number__c</fullName>
        <label>Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>QuestionTitle__c</fullName>
        <label>QuestionTitle</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QuestionType__c</fullName>
        <label>QuestionType</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Response__c</fullName>
        <label>Response</label>
        <referenceTo>Response__c</referenceTo>
        <relationshipLabel>Answers</relationshipLabel>
        <relationshipName>Answers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Survey__c</fullName>
        <formula>HYPERLINK(&quot;/&quot; &amp; Response__r.Survey__c, Response__r.Survey__r.Name)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Survey</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Text__c</fullName>
        <label>Text</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Url__c</fullName>
        <label>Url</label>
        <type>Url</type>
    </fields>
    <label>Answer</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Answer</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Answers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>